# toolbox

./: .editorconfig  .ideavimrc  README.md
editors/: .ideavimrc  README.md  init.lua  init.vim
fish/: config.fish  fish_variables
python/: pyproject.toml
shell_scripts/: README.md  set_google_dns
shell_scripts/security/: password_pwned_check
windows/: README.md  settings.json
wireshark/: .xdp-tcp_plain.zip-ANAm8S  README.md
